Fixed scrollbars

--- a/styles/_listing.scss
+++ b/styles/_listing.scss
@@ -6,22 +6,20 @@
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    overflow: auto;
     width:100%;
 }
 
 .listing-container {
 	box-shadow: 0 0 10px rgba(0,0,0,.4);
 	display: inline-block;
-	height: 100%;
-	width: 100%;
-	overflow-y: scroll;
+	height: 100vh;
+	width: 100vw;
 }
 
 
 .listing-header {
 	background-color: $blue;
-	height: 70px;
+	height: 10vh;
 	margin: auto;
 	width: 75%;
 }
@@ -39,7 +37,7 @@ a .listing-header-branding:visited {
 	@include shift(1);
 	background-color: rgb(250,250,250);
 	font-size: 1.8vw;
-	line-height: 70px;
+	line-height: 10vh;
 	text-align: center;
 }
 
@@ -62,7 +60,7 @@ a .listing-header-branding:visited {
 	@include omega();
 	color: rgb(250,250,250);
 	display: inline-block;
-	line-height: 70px;
+	line-height: 10vh;
 	text-align: center;
 	transition: all .2s ease;
 }
@@ -75,8 +73,7 @@ a .listing-header-branding:visited {
 }
 
 .listing-content {
-	height: 90%;
-	overflow: scroll;
+	height: 90vh;
 }
 
 .listing-info {
@@ -151,7 +148,6 @@ a .listing-header-branding:visited {
 	font-family: sans-serif;
 	font-size: 1.2em;
 	line-height: 1.5em;
-	overflow: scroll;
 	padding-left: 1em;
 	padding-top: 1em;
 }
@@ -171,7 +167,6 @@ a .listing-header-branding:visited {
 	background-color: rgb(250,250,250);
 	display: inline-block;
 	height: 100%;
-	overflow: scroll;
 	position: relative;
 }
 
