--- a/styles/main.scss
+++ b/styles/main.scss
@@ -40,9 +40,8 @@ html, body {
   font-family: $base-font-family;
   background-color: $base-background-color;
   color: $base-font-color;
-  height: 100%;
-  overflow: scroll;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
 }
 
 #app {
